# zk-voting-sp1

./: .gitignore  README.md
contracts/: VotingVerifier.sol
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  constants.ts
frontend/src/components/: ResultsDisplay.tsx  VotingForm.tsx  WalletConnect.tsx
frontend/src/hooks/: useVoting.ts  useWallet.ts
frontend/src/services/: contractService.ts  proofService.ts
script/: Cargo.toml
script/src/: main.rs
voting-program/: Cargo.toml
voting-program/src/: main.rs
