[package]
name = "voting-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "3.0.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
